@@ -1,4 +1,8 @@
-﻿zg 29.05.2015 19:12:18 +0200 - build 4383
+﻿zg 29.05.2015 23:39:54 +0200 - build 4384
+
+1. 0002997: Improper sorting after Compare Folders.
+
+zg 29.05.2015 19:12:18 +0200 - build 4383
 
 1. на чистом профиле FARLANG устанавливается в пустое значение.
 
